--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:id="@+id/github_mark"
+        android:id="@+id/githubMark"
         />
     <ImageView
         android:layout_width="128dp"
@@ -25,8 +25,8 @@
         android:src="@drawable/github_logo"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/github_mark"
-        android:id="@+id/github_logo"
+        app:layout_constraintTop_toBottomOf="@id/githubMark"
+        android:id="@+id/githubLogo"
         />
     
     <EditText
@@ -36,13 +36,13 @@
         android:layout_marginTop="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/github_logo"
+        app:layout_constraintTop_toBottomOf="@id/githubLogo"
 
         android:textColorHint="#FEFEFE"
         android:textColor="#FFFFFF"
         android:textAlignment="center"
 
-        android:id="@+id/github_username_entry"
+        android:id="@+id/githubUsername"
 
         android:inputType="text"
         android:hint="@string/placeholder_input"
@@ -52,9 +52,10 @@
         android:layout_width="128dp"
         android:layout_height="0dp"
         android:text="Check"
+        android:id="@+id/submitUsername"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/github_username_entry"
+        app:layout_constraintTop_toBottomOf="@id/githubUsername"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
