--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -11,14 +11,15 @@
       android:layout_height="250dp"
       android:background="#B1C2DD"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="1.0"
+      app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -32,81 +33,118 @@
           app:layout_constraintTop_toTopOf="parent"
           tools:srcCompat="@tools:sample/avatars" />
 
-      <TextView
-          android:id="@+id/displayName"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_marginStart="16dp"
-          android:text="Benjamin Wang"
-          android:textColor="@color/white"
-          android:textSize="24sp"
+      <TableLayout
+          android:layout_width="200dp"
+          android:layout_height="match_parent"
+          android:layout_marginStart="8dp"
           app:layout_constraintStart_toEndOf="@+id/profilePicture"
-          app:layout_constraintTop_toTopOf="parent" />
+          app:layout_constraintTop_toTopOf="parent">
 
-      <TextView
-          android:id="@+id/githubUsername"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_marginStart="16dp"
-          android:layout_marginTop="8dp"
-          android:text="\@benwang2"
-          android:textColor="@color/white"
-          app:layout_constraintStart_toEndOf="@+id/profilePicture"
-          app:layout_constraintTop_toBottomOf="@+id/displayName" />
+        <TableRow
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent"
+            android:paddingBottom="4dp">
 
-      <TextView
-          android:id="@+id/twitterHandle"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_marginStart="4dp"
-          android:text="twitter.com/benwang"
-          android:textColor="@color/white"
-          app:layout_constraintBottom_toBottomOf="@+id/imageView2"
-          app:layout_constraintStart_toEndOf="@+id/imageView2"
-          app:layout_constraintTop_toTopOf="@+id/imageView2" />
+          <TextView
+              android:id="@+id/displayName"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_gravity="left"
+              android:text="display_name"
+              android:textColor="@color/white"
+              android:textSize="24sp" />
+        </TableRow>
 
-      <TextView
-          android:id="@+id/email"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_marginStart="4dp"
-          android:text="ben.l.wang@outlook.com"
-          android:textColor="@color/white"
-          app:layout_constraintBottom_toBottomOf="@+id/imageView3"
-          app:layout_constraintStart_toEndOf="@+id/imageView3"
-          app:layout_constraintTop_toTopOf="@+id/imageView3" />
+        <TableRow
+            android:id="@+id/githubRow"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="4dp">
 
-      <ImageView
-          android:id="@+id/imageView2"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_marginStart="16dp"
-          android:layout_marginTop="8dp"
-          app:layout_constraintStart_toEndOf="@+id/profilePicture"
-          app:layout_constraintTop_toBottomOf="@+id/githubUsername"
-          app:srcCompat="@drawable/ic_twitter" />
+          <TextView
+              android:id="@+id/githubUsername"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_gravity="left"
+              android:text="\@github_username"
+              android:textColor="@color/white" />
+        </TableRow>
 
-      <ImageView
-          android:id="@+id/imageView3"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_marginStart="16dp"
-          android:layout_marginTop="8dp"
-          app:layout_constraintStart_toEndOf="@+id/profilePicture"
-          app:layout_constraintTop_toBottomOf="@+id/imageView2"
-          app:srcCompat="@drawable/ic_email" />
+        <TableRow
+            android:id="@+id/twitterRow"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layoutDirection="ltr"
+            android:paddingBottom="4dp"
+            android:visibility="visible">
+
+          <ImageView
+              android:id="@+id/twitterIcon"
+              android:layout_width="0dp"
+              android:layout_height="wrap_content"
+              android:layout_gravity="left"
+              android:layout_weight="0.2"
+              android:cropToPadding="false"
+              android:paddingTop="4dp"
+              app:srcCompat="@drawable/ic_twitter" />
+
+          <TextView
+              android:id="@+id/twitterUsername"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_gravity="left"
+              android:layout_marginStart="4dp"
+              android:layout_weight="0.7"
+              android:text="twitter_username"
+              android:textColor="@color/white" />
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/emailRow"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="4dp">
+
+          <ImageView
+              android:id="@+id/emailIcon"
+              android:layout_width="0dp"
+              android:layout_height="wrap_content"
+              android:layout_gravity="left"
+              android:layout_weight="0.2"
+              android:cropToPadding="false"
+              android:paddingTop="4dp"
+              app:srcCompat="@drawable/ic_email" />
+
+          <TextView
+              android:id="@+id/email"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_gravity="start|left"
+              android:layout_marginStart="4dp"
+              android:layout_weight="0.7"
+              android:text="john.doe@gmail.com"
+              android:textColor="@color/white" />
+        </TableRow>
+      </TableLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <LinearLayout
+        android:layout_width="409dp"
+        android:layout_height="96dp"
+        android:layout_marginTop="1dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"></LinearLayout>
 
   </androidx.constraintlayout.widget.ConstraintLayout>
 
   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/recyclerView"
-      android:layout_width="409dp"
-      android:layout_height="0dp"
-      android:layout_marginTop="1dp"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
+      android:layout_width="match_parent"
+      android:layout_height="194dp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 </androidx.constraintlayout.widget.ConstraintLayout>
