Fixed intent extras, profile card layout strings.
Profile followers and following count were not display properly due to improper passing of extras.

--- a/app/src/main/res/layout/profile_card_layout.xml
+++ b/app/src/main/res/layout/profile_card_layout.xml
@@ -29,15 +29,14 @@
 
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
-            android:layout_marginTop="8dp"
-            android:orientation="horizontal"
+            android:layout_marginStart="16dp"
             android:baselineAligned="false"
+            android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="@+id/profilePicture"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/githubUsername"
-            app:layout_constraintTop_toBottomOf="@+id/githubUsername">
+            app:layout_constraintStart_toEndOf="@+id/profilePicture">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="0dp"
@@ -59,7 +58,7 @@
                     android:id="@+id/followersLabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView"
+                    android:text="@string/followers"
                     android:textColor="@android:color/secondary_text_dark"
                     android:textSize="10sp"
                     app:layout_constraintStart_toStartOf="@+id/followersIcon"
@@ -97,7 +96,7 @@
                     android:id="@+id/followingLabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView"
+                    android:text="@string/following"
                     android:textColor="@android:color/secondary_text_dark"
                     android:textSize="10sp"
                     app:layout_constraintStart_toStartOf="@+id/followingIcon"
@@ -135,7 +134,7 @@
                     android:id="@+id/starredLabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView"
+                    android:text="@string/starred"
                     android:textColor="@android:color/secondary_text_dark"
                     android:textSize="10sp"
                     app:layout_constraintStart_toStartOf="@+id/starredIcon"
@@ -173,7 +172,7 @@
                     android:id="@+id/reposLabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView"
+                    android:text="@string/repositories"
                     android:textColor="@android:color/secondary_text_dark"
                     android:textSize="10sp"
                     app:layout_constraintStart_toStartOf="@+id/reposIcon"
