--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -28,6 +28,7 @@
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">
 
       <androidx.constraintlayout.widget.ConstraintLayout
+          android:id="@+id/followersRegion"
           android:layout_width="0dp"
           android:layout_height="match_parent"
           android:layout_weight="0.25">
@@ -66,6 +67,7 @@
       </androidx.constraintlayout.widget.ConstraintLayout>
 
       <androidx.constraintlayout.widget.ConstraintLayout
+          android:id="@+id/followingRegion"
           android:layout_width="0dp"
           android:layout_height="match_parent"
           android:layout_weight="0.25">
@@ -105,6 +107,7 @@
       </androidx.constraintlayout.widget.ConstraintLayout>
 
       <androidx.constraintlayout.widget.ConstraintLayout
+          android:id="@+id/starredRegion"
           android:layout_width="0dp"
           android:layout_height="match_parent"
           android:layout_weight="0.25">
@@ -144,6 +147,7 @@
       </androidx.constraintlayout.widget.ConstraintLayout>
 
       <androidx.constraintlayout.widget.ConstraintLayout
+          android:id="@+id/reposRegion"
           android:layout_width="0dp"
           android:layout_height="match_parent"
           android:layout_weight="0.25">
